--- a/document.tex
+++ b/document.tex
@@ -23,15 +23,14 @@
 
 %% -----------------------------------
 % Edit the variables for the paper here!
-\def \srsTitle{Project Title}
-\def \srsAuthorOne{Name Surname}
-\def \srsAuthorTwo{Name Surname}
-\def \srsAuthorThree{Name Surname}
-\def \srsAcademicYear{YYYY}
+\def \srsTitle{Protractor}
+\def \srsAuthorOne{Nantawan Paramapooti}
+\def \srsAuthorTwo{Pichayoot Tanasinanan}
+\def \srsAcademicYear{2026}
 
-\def \srsAdvisorName{Project Advisor's Name}
-\def \srsCoAdvisorName{Project Co-Advisor's Name}
-\def \srsHoDName{Head of Department's Name}
+\def \srsAdvisorName{Punpiti Piamsa-nga}
+\def \srsCoAdvisorName{Prof. Chantana Chantrapornchai}
+\def \srsHoDName{Punpiti Piamsa-nga}
 %% -----------------------------------
 
 \begin{document}
