--- a/body/acknowledgement.tex
+++ b/body/acknowledgement.tex
@@ -2,12 +2,17 @@
 \label{chap:acknowledgement}
 \addcontentsline{toc}{chapter}{\nameref{chap:acknowledgement}}
 
-Put your acknowledgement paragraph here.
+We would like to express our sincere gratitude to the Department of Computer Engineering, Kasetsart University for providing us with invaluable resources, technical knowledge, and support throughout the development of this project. Their guidance has been instrumental in shaping the Protractor system.
+
+We are deeply thankful to our advisor, Assoc. Prof. Dr. Punpiti Piamsa-nga, for his expertise and mentorship in the field of image processing and adversarial attacks, which have been critical to the project's success. We also extend our heartfelt appreciation to Prof. Chantana Chantrapornchai, Ph.D., for her insightful guidance on parallel computing and optimization, enabling us to refine the efficiency of our AI pipeline.
+
+Additionally, we would like to acknowledge the research communities and open-source contributors whose work on adversarial robustness, video processing, and AI security provided essential knowledge and tools that contributed to this project’s implementation.
+
+Finally, we would like to thank our faculty members, colleagues, and everyone who has supported and encouraged us throughout this journey. Their insights, discussions, and feedback have been invaluable in developing a meaningful and impactful solution to counter AI exploitation in video generation.
 
 
 \vspace{.2in}
 \begin{flushright}
     \usevar{\srsAuthorOne} \\
     \usevar{\srsAuthorTwo} \\
-    \usevar{\srsAuthorThree}
 \end{flushright}
