stuff before terminology

--- a/body/discussion.tex
+++ b/body/discussion.tex
@@ -4,3 +4,6 @@
 <TIP: Discuss your work here. For example, you can discuss software patterns
 that you use in this project, software libraries, difficulties encountered during
 development, or any other topic. />
+
+We both need to develop a better base understanding of our AI generation, Data poisoning and many other topics to understand how we could poison video best, and as hardware efficient as possible.
+Thus, we currently are doing AI workshop labs in our freetime, advised by our project overseer Dr. Punpiti, starting since 7 January 2025.
