--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -4,9 +4,13 @@
 \section{Background}
 \label{section:background}
 
-A background chapter in a book serves the purpose of providing essential context, information, or history that is relevant
-to the overall understanding of the book's subject matter. This chapter typically appears early in the book and aims to set the
-stage for the reader by offering background details that are crucial for comprehending the main narrative.
+Video Generative AI[0] refers to artificial intelligence models that create videos based on textual descriptions, images, or existing video inputs. 
+
+The widespread use of this AI has led to concerns about copyright infringement[1], as AI models[2] often rely on vast datasets scraped from the internet, including copyrighted content, without explicit permission from original creators. Many artists and content creators advocate for stricter regulations to protect their works from being used without consent.
+
+One of the most alarming consequences of AI-generated video technology is impersonation, often referred to as "deepfakes." AI can synthesize realistic videos of individuals, making them appear to say or do things they never did. This poses risks in identity theft, misinformation, fraud, and political manipulation. The ability to create hyper-realistic fake videos raises concerns about trust in digital content and calls for advanced detection methods to counteract malicious use.
+
+Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets, ensuring that generative models cannot easily exploit original artistic content. However, it would be considered an aspect of data security, and restrict malicious actors from exploiting your data against your interests.
 
 \section{Problem Statement}
 \label{section:problem-statement}
@@ -16,23 +20,40 @@ challenge, or question that the project aims to address or explore. It is a
 declaration that highlights the specific problem the author intends to examine,
 discuss, or solve throughout the course of the project.
 
+Problems from the invention of Video-output Generative AI
+
+1. Deepfake
+    1.1. Identity theft
+    1.2. Forgery of False Evidence of crimes
+    1.3. Defamation from non-consensual explicit generated video
+2. Grifters
+    2.1. Copyright Infringement
+    2.2. Dead internet theory 
+
+Technical Problems
+
+1. There is currently no existing video poisoning processor, but there is research on video poisoning tactics.
+2. Frame-by-Frame poisoning with static Image poisoning processor as an alternative.
+    2.1. Manually poisoning frame by frame is inconvenient for production use.
+    2.2. Processing time scales horribly with video duration and fps.
+    2.3. Static Image poisoning tactics is less effective against Video generative AI.
+
 \section{Solution Overview}
 \label{section:solution-overview}
 
-A software solution overview provides a high-level and
-concise description of a software product or system. It serves as an
-introduction to the software, offering a glimpse into its key features,
-functionalities, and the problems it aims to address. This overview is often
-presented in documentation, marketing materials, or other communication
-channels to give stakeholders, potential users, or decision-makers a quick
-understanding of what the software does and why it is valuable.
+This software seeks to simplify the process of video poisoning to be as easy as a few clicks.
+We'd only need the user to inputing their video, set some preferences, start the process and wait for the poisoned video output in their designated folder.
+While being effective against generative ai and efficiently optimize hardware resources to process larger video; ranging from 5 minutes to 2 hours, to be processed fast and reliable enough for our target users such as filmmakers, content creators, and studios to incorporate this in their workflow. 
 
 \subsection{Features}
 \label{subsection:features}
 
 \begin{enumerate}[leftmargin=80pt]
-    \item Feature Name: Short Description of Feature
-    \item Feature Name: Short Description of Feature
+    \item Video Input: Input your video to poison
+    \item Perturbation Settings: Set predefined Parameters such as perturbation weights or quality to set the perturbation strength and output quality. More parameters may be added depending on the available parameters of the system's poisoning methods.
+    \item Output folder: User can select where the output will be stored when the video poisoning process has finished.
+    \item Start Poisoning: Click to start the poisoning process. The process cannot be stopped while it is running until the process finishes.
+    \item Hardware optimization: Optimize the available hardware to minimize processing time duration. This would be done automatically but may allow users to set hardware themselves if deemed appropriate.
 \end{enumerate}
 
 \section{Target User}
@@ -76,3 +97,21 @@ specialized vocabulary used to describe concepts, ideas, or subjects within a
 particular field or domain. The use of terminology is often essential for clarity
 and precision, especially in books that cover technical, scientific, academic, or
 specialized topics.
+
+[0]AI : artificial intelligence
+[1]copyright infringement :
+[2]AI models : 
+[3]datasets : 
+[]scraped from the internet :
+[]
+Deepfake
+
+Grifters
+
+Dead internet theory
+    genuine human interaction is overtaken by AI slop
+
+Data Poisoning
+Data Security
+datasets
+scraped
