--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -6,24 +6,19 @@
 
 Video Generative AI[0] refers to artificial intelligence models that create videos based on textual descriptions, images, or existing video inputs. 
 
-The widespread use of this AI has led to concerns about copyright infringement[1], as AI models[2] often rely on vast datasets scraped from the internet, including copyrighted content, without explicit permission from original creators. Many artists and content creators advocate for stricter regulations to protect their works from being used without consent.
+The widespread use of this AI has led to concerns about copyright infringement[1], as AI models[2] often rely on vast datasets[3] scraped from the internet[4], including copyrighted content[5], without explicit permission from original creators[6]. Many artists and content creators advocate for stricter regulations to protect their works from being used without consent.
 
-One of the most alarming consequences of AI-generated video technology is impersonation, often referred to as "deepfakes." AI can synthesize realistic videos of individuals, making them appear to say or do things they never did. This poses risks in identity theft, misinformation, fraud, and political manipulation. The ability to create hyper-realistic fake videos raises concerns about trust in digital content and calls for advanced detection methods to counteract malicious use.
+One of the most alarming consequences of AI-generated video technology is impersonation[7], often referred to as "deepfakes[8]." AI can create realistic videos of individuals, making them appear to say or do things they never did. This poses risks in identity theft[9], misinformation[10], fraud[11], and political manipulation[12]. The ability to create hyper-realistic fake videos raises concerns about trust in digital content and calls for advanced detection methods to counteract malicious use.
 
-Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets, ensuring that generative models cannot easily exploit original artistic content. However, it would be considered an aspect of data security, and restrict malicious actors from exploiting your data against your interests.
+Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets[13], ensuring that generative models[14] cannot easily exploit original artistic content. However, it would be considered an aspect of data security[15], and restrict malicious actors from exploiting your data against your interests.
 
 \section{Problem Statement}
 \label{section:problem-statement}
 
-A problem statement refers to a clear central issue,
-challenge, or question that the project aims to address or explore. It is a
-declaration that highlights the specific problem the author intends to examine,
-discuss, or solve throughout the course of the project.
-
 Problems from the invention of Video-output Generative AI
 
-1. Deepfake
-    1.1. Identity theft
+1. Deepfake[8]
+    1.1. Identity theft[9]
     1.2. Forgery of False Evidence of crimes
     1.3. Defamation from non-consensual explicit generated video
 2. Grifters
@@ -98,12 +93,22 @@ particular field or domain. The use of terminology is often essential for clarit
 and precision, especially in books that cover technical, scientific, academic, or
 specialized topics.
 
+\subsection{Background}
+\label{subsection:Background}
 [0]AI : artificial intelligence
-[1]copyright infringement :
-[2]AI models : 
-[3]datasets : 
-[]scraped from the internet :
-[]
+[1]copyright infringement : violating copyright law over a content
+[2]AI models : AI programs consisting of complex mathematical and computational techniques to process vast amounts of data and extract meaningful insights.
+[3]datasets : collections of data used to train AI models.
+[4]scraped from the internet : automatically collecting data from online sources, often using web crawlers or scrapers.
+[5]copyrighted content : Any creative work (e.g., videos, images, music) legally protected under copyright law, requiring permission for use.
+[6]original creators : The individuals or entities who produce and hold the legal rights to creative content.
+[7]Impersonation : The act of fraudulently imitating a person, often using AI-generated media, to deceive others.
+[8]deepfakes : AI-generated videos that convincingly replace a person’s likeness or voice with another, often for deceptive purposes.
+[9]identity theft : The unauthorized use of someone’s personal information to commit fraud or other crimes.
+[10]misinformation : False or misleading information spread unintentionally or deliberately, often amplified by AI-generated content.
+[11]fraud : Deceptive actions intended to achieve financial or personal gain, sometimes involving AI-generated media.
+[12]political manipulation : The use of deceptive tactics, such as deepfakes or AI-generated propaganda, to influence public opinion or elections.
+
 Deepfake
 
 Grifters
