--- a/body/relatedworks.tex
+++ b/body/relatedworks.tex
@@ -1,11 +1,10 @@
 \chapter{Literature Review and Related Work}
 \label{chap:relatedworks}
 
-In this chapter, describe other solutions/research that address the
-same topic as your project. If you are working on a software project, create a
-list of alternative solutions and analyze them in the competitor analysis section.
-If you are working on a research project, describe your related work research in
-the literature review section.
+% Generative AI has seen rapid advancements, particularly in video synthesis and manipulation. 
+% However, as AI-generated content becomes more sophisticated, concerns over deepfake misuse, copyright violations, 
+% and data exploitation have risen. Several existing tools attempt to address these challenges, 
+% but they focus primarily on static image protection rather than video poisoning.
 
 \section{Competitor Analysis}
 \label{section:competitor-analysis}
@@ -15,10 +14,6 @@ the literature review section.
     \includegraphics[width=0.5\textwidth]{examples/asana-competitive-landscape.jpg}
     \caption{Competitive Landscape by Asana}
 \end{figure}
-
-Refer to an article "How to create a competitive analysis (with
-examples)" by Asana. You can use the Competitor Landscape (left image) or
-Competitor Analysis Framework (right image) for your project.
 
 \section{Literature Review}
 \label{section:literature-review}
