--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -55,44 +55,42 @@ While being effective against generative ai and efficiently optimize hardware re
 \label{section:target-user}
 
 \begin{itemize}
-    \item \textbf{Digital Content Creators \& Video Artists:} Professionals and amateurs (e.g., filmmakers, digital artists) concerned about AI scraping their work. Protractor ensures AI cannot accurately process their videos, preventing misuse.
-    
-    \item \textbf{Researchers in AI Security \& Adversarial Machine Learning:} AI ethics researchers and security analysts studying adversarial robustness. Since current AI poisoning methods mainly target images, Protractor provides a tool for testing adversarial perturbations in videos.
-    
-    \item \textbf{Legal and Copyright Protection Experts:} Media attorneys and digital rights organizations dealing with AI-generated deepfakes and content misuse. Protractor helps protect intellectual property from unauthorized AI training.
-    
-    \item \textbf{Industry Professionals in Media \& Entertainment:} Streaming platforms, game developers, and animation studios facing AI replication of artistic styles. Protractor’s poisoning techniques prevent AI from learning and mimicking their creative work.
+    \item \textbf{Digital Content Creators \& Video Artists:} They have had their creations used as training data without their permission to replicate their work, making their creative, unique, curated work being buried amongst their AI copies that hurt their profits and fame.
+    \item \textbf{Industry Professionals in Media \& Entertainment:} Animation studios are at risk of having their creative works being exploited to create lower quality but faster animations. This could result in the death of the Animation industry altogether as Animator and other creatives being laid off after their works had been trained on AI and the audience ends up with an incoherent meaningless repetitive mediocre slop because the company thought that was good enough for the audience and artist become more distrustful of sharing their works online.
+
+    \item \textbf{Anti-AI social media platforms:} Cara, BlueSky, Teezr, VGen are against AI content on their platform. This could be part of their feature to protect their userbase’s video against being used to train on AI.
+    \item \textbf{Individuals who do not want their videos to be used to train generative AI:} From the dangers of deepfakes, regular people do not want their face to be used to train generative AI in General, but data scraping was done without their consent.
 \end{itemize}
 
 \section{Benefit}
 \label{section:benefit}
 
-The Protractor system protects video content from unauthorized AI training by applying adversarial 
-techniques that disrupt AI perception while remaining imperceptible to humans. It prevents AI from
- accurately processing videos, reducing the risk of deepfake generation and unauthorized replication. 
- This enhances intellectual property protection for creators and safeguards the creative industry 
- from AI-driven content theft. Additionally, Protractor supports AI security research, helping 
- experts study AI vulnerabilities in video poisoning. Its easy-to-use implementation allows content 
- creators and researchers to apply AI poisoning without requiring advanced technical expertise.
+The Protractor system protects video content from unauthorized AI training by applying adversarial techniques that disrupt AI perception while remaining imperceptible to humans.
+
+\begin{itemize}
+    \item It prevents AI from accurately processing videos, reducing the risk of deepfake generation and unauthorized replication. 
+    \item It enhances intellectual property protection for creators and safeguards the creative industry from AI-driven content theft.
+    \item Its easy-to-use implementation allows content creators and researchers to apply AI poisoning without requiring advanced technical expertise.
+\end{itemize}
 
 \section{Terminology}
 \label{section:terminology}
 
 \subsection{Background}
 \label{subsection:Background}
-[0]AI : artificial intelligence
-[1]copyright infringement : violating copyright law over a content
-[2]AI models : AI programs consisting of complex mathematical and computational techniques to process vast amounts of data and extract meaningful insights.
-[3]datasets : collections of data used to train AI models.
-[4]scraped from the internet : automatically collecting data from online sources, often using web crawlers or scrapers.
-[5]copyrighted content : Any creative work (e.g., videos, images, music) legally protected under copyright law, requiring permission for use.
-[6]original creators : The individuals or entities who produce and hold the legal rights to creative content.
-[7]Impersonation : The act of fraudulently imitating a person, often using AI-generated media, to deceive others.
-[8]deepfakes : AI-generated videos that convincingly replace a person’s likeness or voice with another, often for deceptive purposes.
-[9]identity theft : The unauthorized use of someone’s personal information to commit fraud or other crimes.
-[10]misinformation : False or misleading information spread unintentionally or deliberately, often amplified by AI-generated content.
-[11]fraud : Deceptive actions intended to achieve financial or personal gain, sometimes involving AI-generated media.
-[12]political manipulation : The use of deceptive tactics, such as deepfakes or AI-generated propaganda, to influence public opinion or elections.
+[0]AI : artificial intelligence \newline
+[1]copyright infringement : violating copyright law over a content \newline 
+[2]AI models : AI programs consisting of complex mathematical and computational techniques to process vast amounts of data and extract meaningful insights. \newline
+[3]datasets : collections of data used to train AI models. \newline
+[4]scraped from the internet : automatically collecting data from online sources, often using web crawlers or scrapers. \newline
+[5]copyrighted content : Any creative work (e.g., videos, images, music) legally protected under copyright law, requiring permission for use. \newline
+[6]original creators : The individuals or entities who produce and hold the legal rights to creative content. \newline
+[7]Impersonation : The act of fraudulently imitating a person, often using AI-generated media, to deceive others. \newline
+[8]deepfakes : AI-generated videos that convincingly replace a person’s likeness or voice with another, often for deceptive purposes. \newline
+[9]identity theft : The unauthorized use of someone’s personal information to commit fraud or other crimes. \newline
+[10]misinformation : False or misleading information spread unintentionally or deliberately, often amplified by AI-generated content. \newline
+[11]fraud : Deceptive actions intended to achieve financial or personal gain, sometimes involving AI-generated media. \newline
+[12]political manipulation : The use of deceptive tactics, such as deepfakes or AI-generated propaganda, to influence public opinion or elections. \newline
 
 Deepfake
 
