--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -4,13 +4,13 @@
 \section{Background}
 \label{section:background}
 
-Video Generative AI[0] refers to artificial intelligence models that create videos based on textual descriptions, images, or existing video inputs. 
+Video Generative AI\textsuperscript{[0]} refers to artificial intelligence models that create videos based on textual descriptions, images, or existing video inputs. 
 
-The widespread use of this AI has led to concerns about copyright infringement[1], as AI models[2] often rely on vast datasets[3] scraped from the internet[4], including copyrighted content[5], without explicit permission from original creators[6]. Many artists and content creators advocate for stricter regulations to protect their works from being used without consent.
+The widespread use of this AI has led to concerns about copyright infringement\textsuperscript{[1]}, as AI models\textsuperscript{[2]} often rely on vast datasets\textsuperscript{[3]} scraped from the internet\textsuperscript{[4]}, including copyrighted content\textsuperscript{[5]}, without explicit permission from original creators\textsuperscript{[6]}. Many artists and content creators advocate for stricter regulations to protect their works from being used without consent.
 
-One of the most alarming consequences of AI-generated video technology is impersonation[7], often referred to as "deepfakes[8]." AI can create realistic videos of individuals, making them appear to say or do things they never did. This poses risks in identity theft[9], misinformation[10], fraud[11], and political manipulation[12]. The ability to create hyper-realistic fake videos raises concerns about trust in digital content and calls for advanced detection methods to counteract malicious use.
+One of the most alarming consequences of AI-generated video technology is impersonation\textsuperscript{[7]}, often referred to as "deepfakes\textsuperscript{[8]}." AI can create realistic videos of individuals, making them appear to say or do things they never did. This poses risks in identity theft\textsuperscript{[9]}, misinformation\textsuperscript{[10]}, fraud\textsuperscript{[11]}, and political manipulation\textsuperscript{[12]}. The ability to create hyper-realistic fake videos raises concerns about trust in digital content and calls for advanced detection methods to counteract malicious use.
 
-Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets[13], ensuring that generative models[14] cannot easily exploit original artistic content. However, it would be considered an aspect of data security[15], and restrict malicious actors from exploiting your data against your interests.
+Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets\textsuperscript{[13]}, ensuring that generative models\textsuperscript{[14]} cannot easily exploit original artistic content. However, it would be considered an aspect of data security\textsuperscript{[15]}, and restrict malicious actors from exploiting your data against your interests.
 
 \section{Problem Statement}
 \label{section:problem-statement}
@@ -76,8 +76,6 @@ The Protractor system protects video content from unauthorized AI training by ap
 \section{Terminology}
 \label{section:terminology}
 
-\subsection{Background}
-\label{subsection:Background}
 [0]AI : artificial intelligence \newline
 [1]copyright infringement : violating copyright law over a content \newline 
 [2]AI models : AI programs consisting of complex mathematical and computational techniques to process vast amounts of data and extract meaningful insights. \newline
