--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -17,8 +17,8 @@ Data poisoning is a method of corrupting AI models by injecting misleading or ha
 
 Problems from the invention of Video-output Generative AI
 
-1. Deepfake[8]
-    1.1. Identity theft[9]
+1. Deepfake
+    1.1. Identity theft
     1.2. Forgery of False Evidence of crimes
     1.3. Defamation from non-consensual explicit generated video
 2. Grifters
